<resources>
    <string name="app_name">project</string>
    <string name="ghi_chu">Mã code gồm 6 kí tự sẽ được đính kèm khi mua sản
 phẩm đèn Smart Light</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="nhap_ma_code">Nhập mã code</string>
    <string name="user">user</string>
    <string name="home">Trang chủ</string>
    <string name="individual">Cá nhân</string>
    <string name="information">Thông tin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bat">Bật</string>
    <string name="do_sang">Mức độ sáng của đèn hiện tại:</string>
    <string name="information_description">Project Smart Light</string>
    <string name="tat">Tắt</string>
    <string name="todo">TODO</string>
    <string name="nho_mat_khau">Nhớ mật khẩu</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="thanh_vien">Thành viên:</string>
    <string name="GVHD">Giáo viên hướng dẫn:</string>
    <string name="giaovien">ThS. Nguyễn Duy Xuân Bách</string>
    <string name="tenThanhVien">Lê Trung Phong \nNgô Lâm Đức \nNguyễn Trung Hiếu</string>
</resources>